--- a/App/src/main/res/values/strings.xml
+++ b/App/src/main/res/values/strings.xml
@@ -5,6 +5,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="adv">Servizio in Background: MeteoService.onCreate()</string>
-
+    <string name="title_activity_prova">Prova</string>
 
 </resources>
