--- a/App/src/main/res/values/strings.xml
+++ b/App/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="title_activity_prova">Prova</string>
     <string name="title_activity_account_manager">AccountManager</string>
     <string name="title_activity_web_view">WebViewActivity</string>
+    <string name="app_id">832717773409055</string>
 
 </resources>
