--- a/App/src/main/res/values/strings.xml
+++ b/App/src/main/res/values/strings.xml
@@ -11,5 +11,5 @@
     <string name="app_id">832717773409055</string>
     <string name="account_text">Syncronize all the events you are attending by logging in your Facebook and Eventbrite accounts!</string>
     <string name="title_activity_event_details">Event\'s details</string>
-
+    <string name="google_api_key">AIzaSyDj6lm3eLSuOhG4rLXL66WUBg7C7XEDYcA</string>
 </resources>
