--- a/App/src/main/res/values/strings.xml
+++ b/App/src/main/res/values/strings.xml
@@ -12,4 +12,9 @@
     <string name="account_text">Syncronize all the events you are attending by logging in your Facebook and Eventbrite accounts!</string>
     <string name="title_activity_event_details"></string>
     <string name="google_api_key">AIzaSyDj6lm3eLSuOhG4rLXL66WUBg7C7XEDYcA</string>
+    <string name="pref_num_scroller_summ">14</string>
+    <string name="pref_refresh"></string>
+    <string name="pref_delay"></string>
+    <string name="title_activity_info">InfoActivity</string>
+
 </resources>
