--- a/App/src/main/res/values/strings.xml
+++ b/App/src/main/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="pref_refresh"></string>
     <string name="pref_delay"></string>
     <string name="title_activity_info">InfoActivity</string>
+    <string name="title_activity_post_metag">PostMetagActivity</string>
 
 </resources>
